--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -16,7 +16,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h6">Boda_BlazorWASM_PowerAutomate</MudText>
+            <MudText Typo="Typo.h6">Secciones</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
