--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -11,8 +11,7 @@
         <MudSpacer />
         <MudText Class="ma-7 pa-2 hellovalentica" Color="Color.Inherit" Align="Align.Center" Typo="Typo.h4">M. Isabel y Nacho</MudText>
         <MudSpacer/>
-        <MudIconButton Icon="@Icons.Custom.Brands.MudBlazor" Color="Color.Inherit" Link="https://mudblazor.com/" Target="_blank" />
-        <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Link="https://github.com/MudBlazor/MudBlazor/" Target="_blank" />
+        <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Inherit" href="#"/>
     </MudAppBar>
     <MudDrawer @bind-Open="_drawerOpen" Elevation="1">
         <MudDrawerHeader>
