--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
     <MudAppBar Elevation="0">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@((e) => DrawerToggle())" />
         <MudSpacer />
-        <MudText Class="ma-7 pa-2 hellovalentica" Color="Color.Inherit" Align="Align.Center" Typo="Typo.h4">M. Isabel y Nacho</MudText>
+        <MudText Class="ma-7 pa-2 hellovalentica" Color="Color.Inherit" Align="Align.Center" Typo="Typo.h5">M Isabel y Nacho</MudText>
         <MudSpacer/>
         <MudIconButton Icon="@Icons.Material.Filled.Home" Color="Color.Inherit" href="#"/>
     </MudAppBar>
