--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -1,9 +1,9 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home" IconColor="Color.Primary">Inicio</MudNavLink>
-    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add" IconColor="Color.Primary">Confirmar asistencia</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Church" IconColor="Color.Primary">Ceremonia</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Restaurant" IconColor="Color.Primary">Banquete</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Hotel" IconColor="Color.Primary">Alojamientos</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary">Regalo</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary">Contacto</MudNavLink>
+    <MudNavLink Href="/horarios" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Restaurant" IconColor="Color.Primary">Horarios</MudNavLink>
+    <MudNavLink Href="/asistencia" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add" IconColor="Color.Primary">Confirmar asistencia</MudNavLink>
+    <MudNavLink Href="/autobuses" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsBus" IconColor="Color.Primary">Confirmar autobuses</MudNavLink>
+    <MudNavLink Href="/alojamientos" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Hotel" IconColor="Color.Primary">Alojamientos</MudNavLink>
+    <MudNavLink Href="/regalo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary">Regalo</MudNavLink>
+    <MudNavLink Href="/contacto" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary">Contacto</MudNavLink>
 </MudNavMenu>
