--- a/Components/TimelineBoda.razor
+++ b/Components/TimelineBoda.razor
@@ -11,7 +11,7 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">13:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Ceremonia</MudText>
+                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">SI QUIERO. Ceremonia</MudText>
                 <MudText>Parroquia Ntra. Sra. de la Asunción de Campanario - Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
@@ -23,8 +23,8 @@
             <ItemOpposite>
             </ItemOpposite>
             <ItemContent>
-                <MudText Color="Color.Primary" Typo="Typo.h5">14:30</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Autobuses ida</MudText>
+                <MudText Color="Color.Primary" Typo="Typo.h5">14:15</MudText>
+                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Salida bus a restaurante</MudText>
                 <MudText>Los autobuses saldrán hacia el lugar del banquete. Se podrán coger en Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
@@ -37,7 +37,7 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">15:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Coctel</MudText>
+                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Cótel y fotos</MudText>
                 <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
@@ -49,22 +49,9 @@
             <ItemOpposite>
             </ItemOpposite>
             <ItemContent>
-                <MudText Color="Color.Secondary" Typo="Typo.h5">16:00</MudText>
+                <MudText Color="Color.Secondary" Typo="Typo.h5">16:30</MudText>
                 <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Comida</MudText>
                 <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
-            </ItemContent>
-        </MudTimelineItem>
-
-        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
-            <ItemDot>
-                <MudIcon Icon="@Icons.Material.Filled.Piano" Size="Size.Large"></MudIcon>
-            </ItemDot>
-            <ItemOpposite>
-            </ItemOpposite>
-            <ItemContent>
-                <MudText Color="Color.Primary" Typo="Typo.h5">18:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Grupo en directo</MudText>
-                <MudText>Terraza Quinto Cecilio. Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
 
@@ -75,7 +62,7 @@
             <ItemOpposite>
             </ItemOpposite>
             <ItemContent>
-                <MudText Color="Color.Secondary" Typo="Typo.h5">19:00</MudText>
+                <MudText Color="Color.Secondary" Typo="Typo.h5">20:00</MudText>
                 <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Barra libre</MudText>
                 <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
@@ -88,8 +75,34 @@
             <ItemOpposite>
             </ItemOpposite>
             <ItemContent>
-                <MudText Color="Color.Primary" Typo="Typo.h5">01:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Autobuses vuelta</MudText>
+                <MudText Color="Color.Primary" Typo="Typo.h5">21:30</MudText>
+                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Primer bus</MudText>
+                <MudText>Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
+            </ItemContent>
+        </MudTimelineItem>
+
+        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+            <ItemDot>
+                <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large"></MudIcon>
+            </ItemDot>
+            <ItemOpposite>
+            </ItemOpposite>
+            <ItemContent>
+                <MudText Color="Color.Primary" Typo="Typo.h5">00:30</MudText>
+                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Segundo bus</MudText>
+                <MudText>Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
+            </ItemContent>
+        </MudTimelineItem>
+
+        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+            <ItemDot>
+                <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large"></MudIcon>
+            </ItemDot>
+            <ItemOpposite>
+            </ItemOpposite>
+            <ItemContent>
+                <MudText Color="Color.Primary" Typo="Typo.h5">21:30</MudText>
+                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Ultimo bus</MudText>
                 <MudText>Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
             </ItemContent>
         </MudTimelineItem>
