--- a/Pages/Autobuses.razor
+++ b/Pages/Autobuses.razor
@@ -8,8 +8,8 @@
 
 <MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Autobuses</MudText>
 
-<MudPaper Class="mt-2 mx-7 mb-7 pa-4" Elevation="10">
-    <MudImage Src="images/mapa.jpg" Width="332" Height="250" Alt="mapa" Elevation="25" Class="rounded-lg ma-4" />
+<MudPaper Class="mt-10 mx-7 mb-7 pa-4" Elevation="4">
+    <MudImage Src="images/mapa.jpg" Width="332" Height="250" Alt="mapa" Class="rounded-lg ma-4" />
 </MudPaper>
 
 <MudGrid>
