--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -65,7 +65,7 @@
 
     <MudItem xs="12">
         <MudContainer Class="flex-column align-center justify-center mud-width-full">
-            <MudText Class="mt-7 adelia" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">¿Nos confirmas tu asistencia?</MudText>
+            <MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">¿Nos confirmas tu asistencia?</MudText>
         </MudContainer>
 
         <div class="d-flex align-center justify-center mt-15">
@@ -76,10 +76,10 @@
     @if (IsAttendanceConfirmed)
     {
         <MudItem Class="mt-2" xs="12">
-            <MudText Class="mt-10 butterfly" Color="Color.Primary" Align="Align.Center" Typo="Typo.h1">¡Genial!</MudText>
-            <MudText Class="mt-10 southland" Color="Color.Primary" Align="Align.Center" Typo="Typo.h1">Danos algunos datos para confirmar tu asistencia</MudText>
+            <MudText Class="mt-10 butterfly" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">¡Genial!</MudText>
+            <MudText Class="mt-10 hellovalentica" Color="Color.Primary" Align="Align.Center" Typo="Typo.h3">Danos algunos datos para confirmar tu asistencia</MudText>
 
-            <div class="d-flex align-center justify-center">
+            <div class="d-flex mt-8 align-center justify-center">
                 <MudRadioGroup T="string" @bind-SelectedOption="@SelectedOptionAcompañante" Required="true" RequiredError="Por favor di si vienes sola/o o con pareja!">
                     <MudRadio Option="@("Option1")">Voy SIN acompañante</MudRadio>
                     <MudRadio Option="@("Option2")">Voy CON acompañante</MudRadio>
@@ -101,10 +101,6 @@
 
         </MudItem>
     }
-
-    <MudItem Class="mt-5" xs="12">
-        <TimelineBoda></TimelineBoda>
-    </MudItem>
 
 </MudGrid>
 
