added turismo page

--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -5,5 +5,6 @@
     <MudNavLink Href="/autobuses" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.DirectionsBus" IconColor="Color.Primary">Confirmar autobuses</MudNavLink>
     <MudNavLink Href="/alojamientos" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Hotel" IconColor="Color.Primary">Alojamientos</MudNavLink>
     <MudNavLink Href="/regalo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Email" IconColor="Color.Primary">Regalo</MudNavLink>
+    <MudNavLink Href="/turismo" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Castle" IconColor="Color.Primary">Turismo</MudNavLink>
     <MudNavLink Href="/contacto" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Phone" IconColor="Color.Primary">Contacto</MudNavLink>
 </MudNavMenu>
