centered turismo grid of cards

--- a/Pages/Turismo.razor
+++ b/Pages/Turismo.razor
@@ -6,10 +6,10 @@
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Turismo</MudText>
+<MudText Class="mt-7 mb-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Turismo</MudText>
 
-<MudGrid Class="ma-6" Spacing="4">
-    <MudItem>
+<MudGrid Spacing="4" Justify="Justify.Center">
+    <MudItem >
         <MudCard Class="custom-card" Elevation="6">
             <MudCardMedia Image="images/castillo.jpg" Height="200" />
             <MudCardContent>
