--- a/Pages/Autobuses.razor
+++ b/Pages/Autobuses.razor
@@ -6,20 +6,34 @@
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Autobuses</MudText>
+<MudText Class="mt-10 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Autobuses</MudText>
 
-<MudPaper Class="mt-10 mx-7 mb-7 pa-4" Elevation="4">
+@* <MudPaper Class="mt-10 mx-7 mb-7 pa-4" Elevation="4">
     <MudImage Src="images/mapa.jpg" Width="332" Height="250" Alt="mapa" Class="rounded-lg ma-4" />
-</MudPaper>
+</MudPaper> *@
 
-<MudGrid>
+<MudText Typo="Typo.h5" Color="Color.Secondary" Align="Align.Center" Class="pa-6 dayroman">Indícanos tu nombre y qué autobuses vas a necesitar</MudText>
+
+
+<MudGrid Class="mt-n4">
     <MudItem Class="mt-2" xs="12">
         <FormBuses></FormBuses>
     </MudItem>
 </MudGrid>
 
+@* <MudText Class="mt-5 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Paradas</MudText>
 
-
+<MudTimeline Class="mt-3">
+    <MudTimelineItem>
+        <MudText>Item A</MudText>
+    </MudTimelineItem>
+    <MudTimelineItem>
+        <MudText Align="Align.End">Item B</MudText>
+    </MudTimelineItem>
+    <MudTimelineItem Color="Color.Primary">
+        <MudText>Item C</MudText>
+    </MudTimelineItem>
+</MudTimeline> *@
 
 <style>
     .flex-container div {
